deploy/uat/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-app-uat
  name: vote-api-uat
  namespace: default
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: vote-api-uat
  sessionAffinity: None
  type: ClusterIP
